# sitech-indi-driver

./: CMakeLists.txt  telescope_sitech.cpp  telescope_sitech.h
